Revert "z-index issue  on menus fixed"
This reverts commit 5ae70c76e6d24073a4f8afe5d9c70ae4ec52e67b.

--- a/components/navigation/Large Navigation 4/_navigation-large.scss
+++ b/components/navigation/Large Navigation 4/_navigation-large.scss
@@ -71,7 +71,7 @@ $animations-duration: 190ms;
 					text-transform: uppercase;
 					text-align: center;
 					position: relative;
-					z-index: 20;
+					z-index: 1;
 
 					/* First Set of Dropdowns Setup */
 					& > .nav-v2-1-dropdown {
